--- a/HomePage/StyleSheet.css
+++ b/HomePage/StyleSheet.css
@@ -103,3 +103,75 @@ body{
     height: auto;   
 
 }
+
+/*Here is the code to design the scoreboard for the 
+"EditingPage.html" page */
+
+.scoreboard{
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* repeat(2, 1fr) is the same as 1fr 1fr*/
+    width: 300px;
+    font-family:'Times New Roman', sans-serif;
+}
+
+
+/*Here we will be setting common styles for the scoreboard name and 
+the scoreboard score, so we will call both classes at the same time */
+
+.scoreboard__name, 
+.scoreboard__score{
+    padding: 10px;
+    text-align: center;
+}
+
+
+/*Next we are only customizing the scoreboard name for
+the scoreboard */
+
+.scoreboard__name{
+    font-weight: bold;
+    border-bottom: 1px solid #ddd;
+}
+
+
+/*Next, we are customizing the color of the name
+tags */
+
+.scoreboard__name--one{
+    color: red;
+}
+
+.scoreboard__name--two{
+    color: blue;
+}
+
+
+/*Here we are customizing the actual score this time */
+
+.scoreboard__score{
+    font-size: 2em;
+}
+
+/*Creating the control buttons for the number */
+
+.scoreboard__controls{
+    display: flex;
+}
+
+.scoreboard__control-button{
+    flex-grow: 1;
+    border: none;
+    background: white;
+    cursor: pointer;
+    font-size: 1.2 em;
+}
+
+
+.scoreboard__control-button:hover{
+    background: #ddd;
+}
+
+.scoreboard__control-button:active{
+    background: #ccc;
+}
+
