--- a/HomePage/StyleSheet.css
+++ b/HomePage/StyleSheet.css
@@ -2,13 +2,12 @@
 body{
     background-color: grey;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: 995px;
+    background-position-x:45%;
+    background-position-y:70%;
+    background-size: 95% 80%;
     background-image: url('Images/soccerField.png');
 }
 
@@ -20,11 +19,11 @@ body{
     text-transform: uppercase;
     font-size: 3vw;
     color: white;
-    border:none;
     margin-left:auto;
     margin-right:auto;
-    width: 65%;
-
+    width: 40%;
+    height:15%;
+    top: 2%;
     
     
 }
@@ -44,13 +43,12 @@ body{
     border: none;
     color: white;
     text-align: center;
-    font-size: 20px;
-    padding: 20px;
-    width: 200px; 
+    font-size: 1.5vw;
+    padding: 1%;
+    width: 15%;
+    height: 12%; 
     transition: all 0.5s;
     cursor: pointer;
-    
-    
 }
 
 #button-setup button span{
@@ -84,7 +82,7 @@ body{
 
 #soccerball-images img{
     position: absolute;
-    top: 5vh;
+    top: 2vh;
     left: 5%;
     max-width: 10vw;
     max-height: 10vh;
@@ -95,7 +93,7 @@ body{
 
 #soccerball-images-two img{
     position: absolute;
-    top: 5vh;
+    top: 2vh;
     right: 5%;
     max-width: 10vw;
     max-height: 10vh;
@@ -103,8 +101,39 @@ body{
 }
 
 #soccerteam img{
+    position: absolute;
+    top: 25vh;
+    right: 37%;
+    max-width: 30vw;
+    max-height: 30vh;
+    height: auto;
+    
+}
+
+/*Placement of the Scoreboard */
+#app{
     display: flex;
     justify-content: center;
+}
+
+#button-back button{
+    display: inline-block;
+    position: absolute;
+    bottom: 5vh;
+    right:0;
+    left:80%;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius: 12px;
+    background-color: red;
+    border: none;
+    color: white;
+    text-align: center;
+    font-size: 10px;
+    padding: 10px;
+    width: 100px; 
+    transition: all 0.5s;
+    cursor: pointer;
 }
 
 /*Here is the code to design the scoreboard for the 
@@ -113,8 +142,10 @@ body{
 .scoreboard{
     display: grid;
     grid-template-columns: 1fr 1fr; /* repeat(2, 1fr) is the same as 1fr 1fr*/
-    width: 300px;
+    width: 350px;
     font-family:'Times New Roman', sans-serif;
+    font-size: medium;
+    background-color: #444;
 }
 
 
@@ -145,7 +176,7 @@ tags */
 }
 
 .scoreboard__name--two{
-    color: blue;
+    color: rgb(47, 124, 240);
 }
 
 
@@ -153,6 +184,7 @@ tags */
 
 .scoreboard__score{
     font-size: 2em;
+    color: white;
 }
 
 /*Creating the control buttons for the number */
@@ -164,7 +196,7 @@ tags */
 .scoreboard__control-button{
     flex-grow: 1;
     border: none;
-    background: white;
+    background: rgb(197, 191, 191);
     cursor: pointer;
     font-size: 1.2 em;
 }
