--- a/HomePage/StyleSheet.css
+++ b/HomePage/StyleSheet.css
@@ -22,9 +22,11 @@ body{
     color: white;
     margin-left:auto;
     margin-right:auto;
-    width: 40%;
+    width: 70%;
     height:15%;
-    top: 2%;
+    max-width: 50%;
+    max-height: 15%;
+   
     
     
 }
@@ -50,6 +52,7 @@ body{
     height: 12%; 
     transition: all 0.5s;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 #button-setup button span{
@@ -80,7 +83,63 @@ body{
 }
 
 
+/*This is to design the back button (so it can go back
+to the home page */
+#button-back button{
+    display: inline-block;
+    position: absolute;
+    bottom: 5vh;
+    left:0;
+    right:66%;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius: 12px;
+    background-color: red;
+    border: none;
+    color: white;
+    text-align: center;
+    font-size: 15px;
+    padding: 10px;
+    width: 10%; 
+    transition: all 0.5s;
+    cursor: pointer;
+    text-transform: uppercase;
+}
 
+#button-back button:hover{
+    background-color: darkgrey;
+    color: black;
+}
+
+
+/*this is for the finish editing animation/design*/
+#finish-button button{
+    display: inline-block;
+    position: absolute;
+    bottom: 5vh;
+    right:0;
+    left:66%;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius: 12px;
+    background-color: red;
+    border: none;
+    color: white;
+    text-align: center;
+    font-size: 15px;
+    padding: 10px;
+    width: 10%; 
+    transition: all 0.5s;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+#finish-button button:hover{
+    background-color: darkgrey;
+    color: black;
+}
+
+/*the next two stylings is for the soccer ball images */
 #soccerball-images img{
     position: absolute;
     top: 2vh;
@@ -101,6 +160,8 @@ body{
     height: auto;   
 }
 
+/*this styling code (below) is for the soccer team
+image */
 #soccerteam img{
     position: absolute;
     top: 25vh;
@@ -117,25 +178,7 @@ body{
     justify-content: center;
 }
 
-#button-back button{
-    display: inline-block;
-    position: absolute;
-    bottom: 5vh;
-    right:0;
-    left:80%;
-    margin-left:auto;
-    margin-right:auto;
-    border-radius: 12px;
-    background-color: red;
-    border: none;
-    color: white;
-    text-align: center;
-    font-size: 10px;
-    padding: 10px;
-    width: 100px; 
-    transition: all 0.5s;
-    cursor: pointer;
-}
+
 
 /*Here is the code to design the scoreboard for the 
 "EditingPage.html" page */
@@ -167,6 +210,7 @@ the scoreboard */
 .scoreboard__name{
     font-weight: bold;
     border-bottom: 1px solid #ddd;
+    cursor: pointer;
 }
 
 
@@ -174,11 +218,15 @@ the scoreboard */
 tags */
 
 .scoreboard__name--one{
+   
     color: red;
+    
 }
 
 .scoreboard__name--two{
+   
     color: rgb(47, 124, 240);
+    
 }
 
 
@@ -225,9 +273,12 @@ tags */
     padding: 24px 32px;
     border-radius: 30px;
     background: lightgrey;
-    position: relative;
-    top: 25px;
-    left: 15px;
+    position: absolute;
+    top: 70vh;
+    right: 39%;
+    max-width: 30vw;
+    max-height: 30vh;
+    height: auto;
 }
 
 
