--- a/HomePage/StyleSheet.css
+++ b/HomePage/StyleSheet.css
@@ -11,7 +11,7 @@ body{
     background-size: 95% 80%;
     background-image: url('Images/soccerField.png');
 }
-
+/* This is the title of the first page */
 #title-block h1{
     background-color: red;
     border-radius: 8px;
@@ -26,11 +26,47 @@ body{
     height:15%;
     max-width: 50%;
     max-height: 15%;
-   
-    
-    
 }
-
+/* This is the bar that's telling the user that the game is in progress */
+#in-progress h1{
+    background-color: red;
+    border-radius: 8px;
+    writing-mode: horizontal-tb;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2vw;
+    color: white;
+    margin-left:auto;
+    margin-right:auto;
+    width: 25%;
+    height:10%;
+    max-width: 50%;
+    max-height: 15%;
+    position: absolute;
+    bottom: 2vh;
+    right: 0;
+    left: 0;
+}
+/* This is the bar that's telling the user that they are editing their game */
+#editing-progress h1{
+    background-color: red;
+    border-radius: 8px;
+    writing-mode: horizontal-tb;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.5vw;
+    color: white;
+    margin-left:auto;
+    margin-right:auto;
+    width: 25%;
+    height:7.5%;
+    max-width: 50%;
+    max-height: 15%;
+    position: absolute;
+    bottom: 2.5vh;
+    right: 0;
+    left: 0;
+}
 
 /*this is all for the going to the editing page button */
 
