--- a/urlEmailTo/elements.css
+++ b/urlEmailTo/elements.css
@@ -1,4 +1,5 @@
 @import "http://fonts.googleapis.com/css?family=Raleway";
+
 /*----------------------------------------------
 CSS settings for HTML div Exact Center
 ------------------------------------------------*/
@@ -75,6 +76,21 @@ textarea {
     background-position:5px 7px;
     width:82%;
     height:95px;
+    padding:10px;
+    resize:none;
+    margin-top:30px;
+    border:1px solid #ccc;
+    padding-left:40px;
+    font-size:16px;
+    font-family:raleway;
+    margin-bottom:30px
+}
+#box {
+    background-image:url(../images/msg.png);
+    background-repeat:no-repeat;
+    background-position:5px 7px;
+    width:82%;
+    height:20%;
     padding:10px;
     resize:none;
     margin-top:30px;
@@ -181,3 +197,20 @@ font-weight:700
     text-decoration: none;
     cursor: pointer;
   }
+
+  #msg {
+    background-image:url(../images/msg.png);
+    background-repeat:no-repeat;
+    background-position:5px 7px;
+    width:82%;
+    height:95px;
+    padding:10px;
+    resize:none;
+    margin-top:30px;
+    border:1px solid #ccc;
+    padding-left:40px;
+    font-size:16px;
+    font-family:raleway;
+    margin-bottom:30px;
+    word-break: break-word;
+}
